# jobot-ai

./: .gitignore  LICENSE  README.md  pyproject.toml  samconfig.toml  template.yaml
latex/: commands.tex  config.tex  main.tex
latex/data/: certification.csv  education.csv  experience.csv  objective.csv  project.csv
seed/: index.py  seed.json
src/: config.py  index.py
src/core/pipeline/load_config/: index.py  requirements.txt
src/core/pipeline/load_config/core/: config_loader.py
src/core/pipeline/merge_offers/: index.py
src/core/pipeline/merge_offers/core/: offer_merger.py
src/core/pipeline/score_offers/: index.py  requirements.txt
src/core/pipeline/score_offers/core/: offer_scorer.py  user_experience_loader.py
src/core/pipeline/score_offers/prompts/: prompt_manager.py  system.txt  user.py
src/core/pipeline/score_offers/providers/: _iprovider.py  anthropic.py  deepseek.py  openai.py  provider_manager.py
src/core/pipeline/send_email/: index.py  requirements.txt
src/core/spiders/bne/: index.py  requirements.txt  spider.py
src/core/spiders/getonboard/: index.py  requirements.txt  spider.py
src/core/spiders/laborum/: index.py  spider.py
src/core/spiders/trabajando/: index.py  spider.py
src/job_spider/: job_class.py  linkedin.py
src/latex_manager/: latex_manager.py
src/llm_model/: llm_model.py
src/resend_manager/: resend_manager.py
src/seed/: index.py  seed.json  user_experience.txt
src/shared/python/core/: models.py
src/shared/python/spiders/: base_spider.py  fetchers.py  standard_format.py
(+2 files in other folders)
